# clipsage

./: README.md  package-lock.json  package.json  tailwind.config.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  clipsage.db  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  ollama.rs
